--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Welcome to my site!</h1>
 <p>This is a useless site, mainly for educational purposes.</p>
-<img scr="https://cdn.shopify.com/s/files/1/0089/6221/1900/articles/skimboarding4_1200x630.jpg?v=1558635954"
+<img scr="https://cdn.shopify.com/s/files/1/0089/6221/1900/articles/skimboarding4_1200x630.jpg?v=1558635954" alt>
