--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<style>
+  h1
+  {
+    color: blue;
+  }
+</style>
 <h1>Welcome to Skimboarding Central!</h1>
 <p>This is a <strong>useless</strong> site, mainly for <em>educational purposes.</em></p>
 <h2>Skimboarding Picture</h2>
