--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <style>
   h1
   {
-    color: blue;
+    color: Gold;
+    font-size: 38pt;
+  }
+  h2
+  {
+    color:Brown;
+    font-size: 24pt;
   }
 </style>
 <h1>Welcome to Skimboarding Central!</h1>
