--- a/inspire.html
+++ b/inspire.html
@@ -9,7 +9,7 @@
     <h1>Stephen Covey</h1>
     <img src="https://deseret.brightspotcdn.com/dims4/default/ae0301e/2147483647/strip/true/crop/799x1200+0+0/resize/566x850!/quality/90/?url=https%3A%2F%2Fcdn.vox-cdn.com%2Fthumbor%2FBW3XkVgCXcsmeUvWAAZY1De39B4%3D%2F0x0%3A799x1200%2F799x1200%2Ffilters%3Afocal%28399x600%3A400x601%29%2Fcdn.vox-cdn.com%2Fuploads%2Fchorus_asset%2Ffile%2F18856772%2F926723.jpg" alt="MLK">
     <p>What inspires one to change their lives, or the lives of others? An individual inspires people by creating something valuable that can apply towards other peoples lives.</p>
-    <p>Over the last 100 years no man exemplifies these values for me more than Martin Luther King. He called people to be accountable for the racial prejudices that we all carry. He demonstrated that violence is not the best way to create lasting change. And throughout his life he sacrificed everything to make the world better.</p>
+    <p></p>Covey is a well known businessman, educator, and public speaker. Over the years, Covey has helped many consumers in various ways by writing books relating to self-help. The most inspiring book is called <em>The 7 Habits of Highly Effective People.</em> I believe that he inspires me because I have goals to improve myself in many categories and the value that he adds to my life has a profound effect. Since Covey alligns well with my values, his content has helped me to implement different things into my daily life to become healthier, more productive, and more confident.
     <p><a href="https://www.biography.com/activist/martin-luther-king-jr">Learn More ...</a></p>
 </body>
 
