--- a/educate.html
+++ b/educate.html
@@ -13,8 +13,8 @@
         <h1>Ted Talks & Animations</h1>
     </body>
      <section>
-            <iframe height="450" width="800" src="https://www.youtube.com/embed/rrkrvAUbU9Y"></iframe>
-            <iframe height="450" width="800" src="https://www.youtube.com/embed/fxbCHn6gE3U"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/x9Ezzxy0frA"></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8jPQjjsBbIc"></iframe>
     </section>
     <section>
         <iframe height="450" width="800" src="https://www.youtube.com/embed/IhJ4CDCfASI"></iframe>
