--- a/educate.html
+++ b/educate.html
@@ -17,7 +17,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/8jPQjjsBbIc"></iframe>
     </section>
     <section>
-        <iframe height="450" width="800" src="https://www.youtube.com/embed/IhJ4CDCfASI"></iframe>
-        <iframe height="450" width="800" src="https://www.youtube.com/embed/dFs9WO2B8uI"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dFs9WO2B8uI"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uk8x3V-sUgU"></iframe>
    </section>   
 </html>
