--- a/profile.html
+++ b/profile.html
@@ -2,14 +2,24 @@
 <html lang="en-us">  
     <head>
         <meta charset="UTF-8">
-        <title>Template</title>
-        <!--Someday I'll use CSS    
+        <title>Profile</title>  
         <style>
             
         </style>
     -->
     </head>
     <body>
-        <h1>Page Title</h1>
+        <h1>Profile</h1>
+        <h2>Luke Waggoner</h2>
+           <section>
+            <img id="mainphoto" src="IMG_6833.png"
+           </section>
+    <p>Special Intrests</p>
+    <ul>
+        <li>Videography</li>
+        <li>Photography</li>
+        <li>Skimboarding</li>
+        </Option></li>
+    </ul>
     </body>
 </html>
