--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,10 @@
         <h1>Profile</h1>
         <h2>Luke Waggoner</h2>
            <section>
-            <img id="mainphoto" src="IMG_6833.png"
+            <img id="mainphoto"
+            src="IMG_6833.png"
+            width="100"
+            height="100" />
            </section>
     <p>Special Intrests</p>
     <ul>
