--- a/index.html
+++ b/index.html
@@ -25,3 +25,7 @@
 <a href="https://waggonerluke.github.io/inspire.html">The Inspire</a>
 <h3>The Amuse Link</h3>
 <a href="https://waggonerluke.github.io/amuse.html">The Amuse</a>
+<h3>The Educate Link</h3>
+<a href="https://waggonerluke.github.io/educate.html">The Educate</a>
+<h3>The Profile Link</h3>
+<a href="https://waggonerluke.github.io/profile.html">The Profile</a>
