--- a/test.html
+++ b/test.html
@@ -37,6 +37,16 @@
 				<td><a href="educate.html">https://waggonerluke.github.io/educate.html</a></td>
 				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Feducate.html">VALIDATE</a></td>
 			</tr>
+            <tr>
+				<td>Template</td>
+				<td><a href="template.html">https://waggonerluke.github.io/template.html</a></td>
+				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Ftemplate.html">VALIDATE</a></td>
+			</tr>
+            <tr>
+				<td>Inspire</td>
+				<td><a href="inspire.html">https://waggonerluke.github.io/inspire.html</a></td>
+				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Finspire.html">VALIDATE</a></td>
+			</tr>
 			</tbody>
 		
 		</table>
