--- a/test.html
+++ b/test.html
@@ -20,32 +20,32 @@
 			<tr>
 				<td>Index</td>
 				<td><a href="index.html">https://waggonerluke.github.io/index.html</a></td>
-				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Findex.html">VALIDATE</a></td>
+				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/index.html">VALIDATE</a></td>
 			</tr>
 			<tr>
 				<td>Profile</td>
 				<td><a href="profile.html">https://waggonerluke.github.io/profile.html</a></td>
-				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Fprofile.html">VALIDATE</a></td>
+				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/profile.html">VALIDATE</a></td>
 			</tr>
 			<tr>
 				<td>Amuse</td>
 				<td><a href="amuse.html">https://waggonerluke.github.io/amuse.html</a></td>
-				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Famuse.html">VALIDATE</a></td>
+				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/amuse.html">VALIDATE</a></td>
 			</tr>
 			<tr>
 				<td>Educate</td>
 				<td><a href="educate.html">https://waggonerluke.github.io/educate.html</a></td>
-				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Feducate.html">VALIDATE</a></td>
+				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/educate.html">VALIDATE</a></td>
 			</tr>
             <tr>
 				<td>Template</td>
 				<td><a href="template.html">https://waggonerluke.github.io/template.html</a></td>
-				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Ftemplate.html">VALIDATE</a></td>
+				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/template.html">VALIDATE</a></td>
 			</tr>
             <tr>
 				<td>Inspire</td>
 				<td><a href="inspire.html">https://waggonerluke.github.io/inspire.html</a></td>
-				<td><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwaggonerluke.github.io%2Finspire.html">VALIDATE</a></td>
+				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/inspire.html">VALIDATE</a></td>
 			</tr>
 			</tbody>
 		
