--- a/test.html
+++ b/test.html
@@ -18,32 +18,32 @@
 			</thead>
 			<tbody>
 			<tr>
-				<td>Index</td>
+				<th>Index</th>
 				<td><a href="index.html">https://waggonerluke.github.io/index.html</a></td>
 				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/index.html">VALIDATE</a></td>
 			</tr>
 			<tr>
-				<td>Profile</td>
+				<th>Profile</th>
 				<td><a href="profile.html">https://waggonerluke.github.io/profile.html</a></td>
 				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/profile.html">VALIDATE</a></td>
 			</tr>
 			<tr>
-				<td>Amuse</td>
+				<th>Amuse</th>
 				<td><a href="amuse.html">https://waggonerluke.github.io/amuse.html</a></td>
 				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/amuse.html">VALIDATE</a></td>
 			</tr>
 			<tr>
-				<td>Educate</td>
+				<th>Educate</th>
 				<td><a href="educate.html">https://waggonerluke.github.io/educate.html</a></td>
 				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/educate.html">VALIDATE</a></td>
 			</tr>
             <tr>
-				<td>Template</td>
+				<th>Template</th>
 				<td><a href="template.html">https://waggonerluke.github.io/template.html</a></td>
 				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/template.html">VALIDATE</a></td>
 			</tr>
             <tr>
-				<td>Inspire</td>
+				<th>Inspire</th>
 				<td><a href="inspire.html">https://waggonerluke.github.io/inspire.html</a></td>
 				<td><a href="https://validator.w3.org/nu/?showsource=yes&doc=https://waggonerluke.github.io/inspire.html">VALIDATE</a></td>
 			</tr>
