--- a/test.html
+++ b/test.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Template</title>
+        <!--Someday I'll use CSS    
+        <style>
+            
+        </style>
+    -->
+    </head>
 	<head>
 		<meta charset="utf-8">
 		<title>Test Page</title>
