--- a/test.html
+++ b/test.html
@@ -18,8 +18,9 @@
 		<h1>Test Page</h1>
 		<table>
 			<caption>Page Directory</caption>
-			<thead>
-				<tr>
+			<thead style="background-color: coral;"
+				<tr
+
 					<th>Page Name</th>
 					<th>URL</th>
 					<th>Validation</th>
