--- a/test.html
+++ b/test.html
@@ -20,9 +20,9 @@
 			<caption>Page Directory</caption>
 			<thead style="background-color: coral;"
 			<tr>
-					<th>Page Name</th>
-					<th>URL</th>
-					<th>Validation</th>
+					<th style="border: 2pt solid black;">Page Name</th>
+					<th style="border: 2pt solid black;">URL</th>
+					<th style="border: 2pt solid black;">Validation</th>
 				</tr>
 			</thead>
 			<tbody>
