--- a/inspire.html
+++ b/inspire.html
@@ -11,7 +11,7 @@
     <p>What inspires one to change their lives, or the lives of others? An individual inspires people by creating something valuable that can apply towards other peoples lives.</p>
     <p></p>Covey is a well known businessman, educator, and public speaker. Over the years, Covey has helped many consumers in various ways by writing books relating to self-help. The most inspiring book is called <em>The 7 Habits of Highly Effective People.</em> I believe that he inspires me because I have goals to improve myself in many categories and the value that he adds to my life has a profound effect. Since Covey alligns well with my values, his content has helped me to implement different things into my daily life to become healthier, more productive, and more confident.
     <p><a href="https://www.famousauthors.org/stephen-r-covey">Want to Learn more? Click Here...</a></p>
-    <p><a href="index.html">Home</a></p>
+    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"</a></p>
 </body>
 
 </html>
