--- a/profile.html
+++ b/profile.html
@@ -22,5 +22,6 @@
         <li>Photography</li>
         <li>Skimboarding</li>
     </ul>
+    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"</a></p>
     </body>
 </html>
