--- a/amuse.html
+++ b/amuse.html
@@ -21,5 +21,7 @@
     <h2>Turmeric</h2>
     <p>Not only is this a spice for cooking, but this herb has powerful ayurvedic antioxidant qualities, learn more throughout the article.</p>
     <a href="https://health.clevelandclinic.org/turmeric-health-benefits/">7 Health Benefits of Turmeric</a>
+    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"</a></p>
+  </body>
     </head>
 </html>
