--- a/educate.html
+++ b/educate.html
@@ -20,4 +20,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dFs9WO2B8uI"></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Uk8x3V-sUgU"></iframe>
    </section>   
+   <body>
+    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"</a></p>
+   </body>
 </html>
