--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
         <h2>Luke Waggoner</h2>
            <section>
             <img id="mainphoto"
-            src="IMG_6833.png"
+            src="images/IMG_6833.png"
             width="240"
             height="300" />
            </section>
