--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <style>
   h1
   {
@@ -30,3 +31,4 @@
 <a href="https://waggonerluke.github.io/educate.html">The Educate</a>
 <h3>The Profile Link</h3>
 <a href="https://waggonerluke.github.io/profile.html">The Profile</a>
+</html>
