--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html>
-<style>
-  h1
-  {
-    color: Red;
-    font-size: 38pt;
-  }
-  h2
-  {
-    color:Brown;
-    font-size: 24pt;
-  }
-</style>
-<h1>Welcome to the Central Hub!</h1>
-<img src
-<p>This is a <strong>useless</strong> site, mainly for <em>educational purposes.</em></p>
-<img src="images/04_UNC_BearMascot_blue.png" alt="UNC Bears LOGO">
-<h2>Skimboarding Picture</h2>
-<img src="images/R.jpg" alt="Skimboarding On Waves">
-<h3>The Inertia Link</h3>
-<a href="http://www.theinertia.com">The Inertia Homepage</a>
-<h1>Page Links</h1>
-<h3>The Template Link</h3>
-<a href="https://waggonerluke.github.io/template.html">The Template</a>
-<h3>The Inspire Link</h3>
-<a href="https://waggonerluke.github.io/inspire.html">The Inspire</a>
-<h3>The Amuse Link</h3>
-<a href="https://waggonerluke.github.io/amuse.html">The Amuse</a>
-<h3>The Educate Link</h3>
-<a href="https://waggonerluke.github.io/educate.html">The Educate</a>
-<h3>The Profile Link</h3>
-<a href="https://waggonerluke.github.io/profile.html">The Profile</a>
+  <head>
+    <title>Central Hub</title>
+    <style>
+      h1 {
+        color: red;
+        font-size: 38pt;
+      }
+      h2 {
+        color: brown;
+        font-size: 24pt;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Welcome to the Central Hub!</h1>
+    <p>This is a <strong>useless</strong> site, mainly for <em>educational purposes.</em></p>
+    <img src="images/04_UNC_BearMascot_blue.png" alt="UNC Bears LOGO">
+    <h2>Skimboarding Picture</h2>
+    <img src="images/R.jpg" alt="Skimboarding On Waves">
+    <h3>The Inertia Link</h3>
+    <a href="http://www.theinertia.com">The Inertia Homepage</a>
+    <h1>Page Links</h1>
+    <h3>The Template Link</h3>
+    <a href="https://waggonerluke.github.io/template.html">The Template</a>
+    <h3>The Inspire Link</h3>
+    <a href="https://waggonerluke.github.io/inspire.html">The Inspire</a>
+    <h3>The Amuse Link</h3>
+    <a href="https://waggonerluke.github.io/amuse.html">The Amuse</a>
+    <h3>The Educate Link</h3>
+    <a href="https://waggonerluke.github.io/educate.html">The Educate</a>
+    <h3>The Profile Link</h3>
+    <a href="https://waggonerluke.github.io/profile.html">The Profile</a>
+  </body>
 </html>
