--- a/profile.html
+++ b/profile.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<html lang="en-us">  
-    <head>
-        <meta charset="UTF-8">
-        <title>Profile</title>  
-        <style>
-            
-        </style>
-    </head>
-    <body>
-        <h1>Profile</h1>
-        <h2>Luke Waggoner</h2>
-           <section>
-            <img id="mainphoto"
-            src="images/IMG_6833.png"
-            width="240"
-            height="300" />
-           </section>
-    <p>Special Intrests</p>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8">
+    <title>Profile</title>
+    <style>
+    </style>
+  </head>
+  <body>
+    <h1>Profile</h1>
+    <h2>Luke Waggoner</h2>
+    <section>
+      <img id="mainphoto" src="images/IMG_6833.png" width="240" height="300" />
+    </section>
+    <p>Special Interests</p>
     <ul>
-        <li>Videography</li>
-        <li>Photography</li>
-        <li>Skimboarding</li>
+      <li>Videography</li>
+      <li>Photography</li>
+      <li>Skimboarding</li>
     </ul>
-    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"</a></p>
-    </body>
+    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"></a></p>
+  </body>
 </html>
