--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <h1>Profile</h1>
     <h2>Luke Waggoner</h2>
     <section>
-      <img id="mainphoto" src="images/IMG_6833.png" width="240" height="300" />
+      <img id="mainphoto" src="images/IMG_6833.png" alt="Profile Picture" width="240" height="300" />
     </section>
     <p>Special Interests</p>
     <ul>
