--- a/amuse.html
+++ b/amuse.html
@@ -2,26 +2,24 @@
 <html lang="en-us">  
     <head>
         <meta charset="UTF-8">
-  <title>Amusing Websites</title>
-  </head>
-  <body>
-    <h1>Amusing Websites</h1>
-    <h3>by Luke Waggoner</h3>
-    <p>There are many different sites on the internet, some helpful, and some are useless.</p>
-    <p>To discover what the internet has to offer, keep exploring.</p>
-
-    <h2>Magnesium Benefits</h2>
+        <title>Amusing Websites</title>
+    </head>
+    <body>
+        <h1>Amusing Websites</h1>
+        <h3>by Luke Waggoner</h3>
+        <p>There are many different sites on the internet, some helpful, and some are useless.</p>
+        <p>To discover what the internet has to offer, keep exploring.</p>
+<h2>Magnesium Benefits</h2>
     <p>Ever wonder what the effects of magnesium are? Dive deep into the health benefits as you read this article.</p>
     <a href="https://www.healthline.com/nutrition/magnesium-benefits">12 Magnesium Health Benefits</a>
 
     <h2>Ashwagandha</h2>
-    <p>Ashwagandha has many health benefits includinging better athletic performance and better sleep, discover more throughout this article.</p>
+    <p>Ashwagandha has many health benefits including better athletic performance and better sleep, discover more throughout this article.</p>
     <a href="https://www.healthline.com/nutrition/ashwagandha">9 Proven Health Benefits of Ashwagandha</a>
 
     <h2>Turmeric</h2>
     <p>Not only is this a spice for cooking, but this herb has powerful ayurvedic antioxidant qualities, learn more throughout the article.</p>
     <a href="https://health.clevelandclinic.org/turmeric-health-benefits/">7 Health Benefits of Turmeric</a>
-    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"</a></p>
-  </body>
-    </head>
-</html>
+    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"></a></p>
+</body>
+</html> 
