--- a/superhero.html
+++ b/superhero.html
@@ -10,6 +10,24 @@
     -->
     </head>
     <body>
-        <h1>Page Title</h1>
+        <h1>Super Hero</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Alias</th>
+                        <th>Image</th>
+                        <th>Superpower</th>
+                        <th>Weakness</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Batman</td>
+                        <td>Bruce Wayne</td>
+                        <td><img src="batman.jpg" alt="Batman"></td>
+                    </tr>
+                </tbody>
+            </table>
     </body>
 </html>
