--- a/superhero.html
+++ b/superhero.html
@@ -23,9 +23,18 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Batman</td>
+                        <td>Bat man</td>
                         <td>Bruce Wayne</td>
                         <td><img src="batman.jpg" alt="Batman"></td>
+                        <td>Average Human, No Powers</td>
+                        <td>Vulnerable to Freezing</td>
+                    </tr>
+                    <tr>
+                        <td>Spider Man</td>
+                        <td>Peter Parker</td>
+                        <td><img src="spiderman.jpg" alt="Spiderman"></td>
+                        <td>Strength, Agility, Spider Webs</td>
+                        <td>Ethyl Chloride Pesticide</td>
                     </tr>
                 </tbody>
             </table>
