--- a/superhero.html
+++ b/superhero.html
@@ -7,8 +7,8 @@
 			border-collapse: collapse;
 			width: 100%;
 			margin-bottom: 20px;
-			background-color: #f2f2f2;
-			border: 2px solid #ddd;
+			background-color: lavender;
+			border: 2px solid black;
 			font-size: 14px;
 			font-family: Arial, sans-serif;
 			text-align: center;
@@ -18,12 +18,8 @@
 			border: 1px solid #ddd;
 		}
 		th {
-			background-color: #4CAF50;
+			background-color: darkcyan;
 			color: white;
-		}
-		tr:hover {
-			background-color: #ddd;
-		}
 	</style>
 </head>
 <body>
