--- a/superhero.html
+++ b/superhero.html
@@ -37,28 +37,28 @@
 			<tr>
 				<td>Bruce Wayne</td>
 				<td>Batman</td>
-				<td><a href="https://pngimg.com/uploads/batman/batman_PNG34.png"><img src="https://pngimg.com/uploads/batman/batman_PNG34.png" alt="Batman" height="100"></a></td>
+				<td><a href="images/batmanprofile.jpeg"><img src="images/batmanprofile.jpeg" alt="Batman" height="100"></a></td>
 				<td>Average Human, No Powers</td>
 				<td>Vulnerable to Freezing</td>
 			</tr>
 			<tr>
 				<td>Peter Parker</td>
 				<td>Spider-Man</td>
-				<td><a href="https://image.tmdb.org/t/p/original/wZGlaMxBAjCIYLzyDWvocaoNooZ.jpg"><img src="https://image.tmdb.org/t/p/original/wZGlaMxBAjCIYLzyDWvocaoNooZ.jpg" alt="Spider-Man" height="100"></a></td>
+				<td><a href="images/Spidermanprofile.jpg"><img src="images/Spidermanprofile.jpg" alt="Spider-Man" height="100"></a></td>
 				<td>Spider-sense, Strength, Agility</td>
 				<td>Ethyl Chloride Pesticide</td>
 			</tr>
 			<tr>
 				<td>Tony Stark</td>
 				<td>Iron Man</td>
-				<td><a href="https://vignette4.wikia.nocookie.net/marvelcinematicuniverse/images/2/24/CACW_Tony_Textless_Poster.jpg/revision/latest/scale-to-width-down/2000?cb=20160527050608"><img src="https://vignette4.wikia.nocookie.net/marvelcinematicuniverse/images/2/24/CACW_Tony_Textless_Poster.jpg/revision/latest/scale-to-width-down/2000?cb=20160527050608" alt="Iron Man" height="100"></a></td>
+				<td><a href="images/IronManProfile.jpg"><img src="images/IronManProfile.jpg" alt="Iron Man" height="100"></a></td>
 				<td>Powered suit with advanced technology</td>
 				<td>EMP, Hacking, Weak without Suit</td>
 			</tr>
 			<tr>
 				<td>Bruce Banner</td>
 				<td>The Hulk</td>
-				<td><a href="https://th.bing.com/th?id=OSK.8a2a9bf3cffbcf60afeda156b7dc6030&w=124&h=168&c=7&o=6&pid=SANGAM"><img src="https://th.bing.com/th?id=OSK.8a2a9bf3cffbcf60afeda156b7dc6030&w=124&h=168&c=7&o=6&pid=SANGAM" alt="The Hulk" height="100"></a></td>
+				<td><a href="images/HulkProfile.jpg"><img src="images/HulkProfile.jpg" alt="The Hulk" height="100"></a></td>
 				<td>Super strength, gets stronger as he gets angrier</td>
 				<td>Oxygen: Choking on Rage</td>
 			</tr>
