--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Central Hub</title>
+    <link rel="stylesheet" href="css/main.css">
     <style>
       h1 {
         color: red;
