--- a/educate.html
+++ b/educate.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Education</title>
+        <link rel="stylesheet" href="css/main.css">
  <style>
         
     </style>
