--- a/resume/skills.html
+++ b/resume/skills.html
@@ -10,10 +10,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#contact">Contact Info</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
+            <li><a href="skills.html">Contact Info</a></li>
+            <li><a href="skills.html">Education</a></li>
+            <li><a href="skills.html">Experience</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
     <main>
