--- a/resume/index.html
+++ b/resume/index.html
@@ -14,6 +14,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </nav>
     <main>
