--- a/resume/skills.html
+++ b/resume/skills.html
@@ -14,7 +14,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="https://waggonerluke.github.io/index.html">Home</a></li>
         </ul>
     </nav>
     <main>
