--- a/resume/skills.html
+++ b/resume/skills.html
@@ -50,7 +50,7 @@
                 <li>Employee Management</li>
                 <li>Graphic Design</li>
             </ul>
-            <img src="img/marketing.jpg" alt="Skills">
+            <img src="images/marketing.jpeg" alt="Digital Marketing">
         </section>
     </main>
 </body>
