--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Central Hub</title>
     <link rel="stylesheet" href="css/main.css">
     <style>
+      @media (min-width; 576px)
       h1 {
         color: red;
         font-size: 38pt;
