--- a/marketing/index.html
+++ b/marketing/index.html
@@ -1,1 +1,41 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Pi Kappa Alpha Fraternity</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section>
+      <h1>Welcome to Pi Kappa Alpha Fraternity</h1>
+      <p>We are a brotherhood dedicated to the betterment of ourselves and our community.</p>
+      <a href="https://www.pikes.org/" target="_blank">Learn More</a>
+    </section>
+    
+    <section>
+      <h2>About Us</h2>
+      <p>Here is some information about our fraternity.</p>
+    </section>
+    
+    <section>
+      <h2>Contact Us</h2>
+      <p>Here is our contact information.</p>
+    </section>
+  </main>
+  
+  <footer>
+    <p>Copyright © 2023 Pi Kappa Alpha Fraternity</p>
+  </footer>
+</body>
+</html>
