--- a/marketing/index.html
+++ b/marketing/index.html
@@ -1,1 +1,24 @@
-?
+<!DOCTYPE html>
+<html lang="en-us">  
+    <head>
+        <meta charset="UTF-8">
+        <title>Education</title>
+        <link rel="stylesheet" href="css/main.css">
+ <style>
+        
+    </style>
+</head>
+
+<body>
+    <h1>Ted Talks & Animations</h1>
+    <section>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/x9Ezzxy0frA"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8jPQjjsBbIc"></iframe>
+    </section>
+    <section>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dFs9WO2B8uI"></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uk8x3V-sUgU"></iframe>
+    </section>   
+    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"></a></p>
+</body>
+</html>
