--- a/marketing/index.html
+++ b/marketing/index.html
@@ -21,4 +21,70 @@
     </section>   
     <p><a href="index.html"><img src="images/button.png" alt="Homepage button"></a></p>
 </body>
+    
+<head>
+	<title>Superheroes Table</title>
+	<style>
+		table {
+			border-collapse: collapse;
+			width: 100%;
+			margin-bottom: 20px;
+			background-color: lavender;
+			border: 2px solid black;
+			font-size: 14px;
+			font-family: Arial, sans-serif;
+			text-align: center;
+		}
+		th, td {
+			padding: 8px;
+			border: 1px solid #ddd;
+		}
+		th {
+			background-color: darkcyan;
+			color: white;
+	</style>
+</head>
+<body>
+	<table>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Alias</th>
+				<th>Image</th>
+				<th>Superpower</th>
+				<th>Weakness</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Bruce Wayne</td>
+				<td>Batman</td>
+				<td><a href="images/batmanprofile.jpeg"><img src="images/batmanprofile.jpeg" alt="Batman" height="100"></a></td>
+				<td>Average Human, No Powers</td>
+				<td>Vulnerable to Freezing</td>
+			</tr>
+			<tr>
+				<td>Peter Parker</td>
+				<td>Spider-Man</td>
+				<td><a href="images/Spidermanprofile.jpg"><img src="images/Spidermanprofile.jpg" alt="Spider-Man" height="100"></a></td>
+				<td>Spider-sense, Strength, Agility</td>
+				<td>Ethyl Chloride Pesticide</td>
+			</tr>
+			<tr>
+				<td>Tony Stark</td>
+				<td>Iron Man</td>
+				<td><a href="images/IronManProfile.jpg"><img src="images/IronManProfile.jpg" alt="Iron Man" height="100"></a></td>
+				<td>Powered suit with advanced technology</td>
+				<td>EMP, Hacking, Weak without Suit</td>
+			</tr>
+			<tr>
+				<td>Bruce Banner</td>
+				<td>The Hulk</td>
+				<td><a href="images/HulkProfile.jpg"><img src="images/HulkProfile.jpg" alt="The Hulk" height="100"></a></td>
+				<td>Super strength, gets stronger as he gets angrier</td>
+				<td>Oxygen: Choking on Rage</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
 </html>
