--- a/marketing/index.html
+++ b/marketing/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Ted Talks & Animations</h1>
+    <h1>Pi Kappa Alpha, Mu Tau Chapter</h1>
     <section>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/x9Ezzxy0frA"></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8jPQjjsBbIc"></iframe>
@@ -50,7 +50,6 @@
 			<tr>
 				<th>Name</th>
 				<th>Alias</th>
-				<th>Image</th>
 				<th>Superpower</th>
 				<th>Weakness</th>
 			</tr>
@@ -59,28 +58,24 @@
 			<tr>
 				<td>Bruce Wayne</td>
 				<td>Batman</td>
-				<td><a href="images/batmanprofile.jpeg"><img src="images/batmanprofile.jpeg" alt="Batman" height="100"></a></td>
 				<td>Average Human, No Powers</td>
 				<td>Vulnerable to Freezing</td>
 			</tr>
 			<tr>
 				<td>Peter Parker</td>
 				<td>Spider-Man</td>
-				<td><a href="images/Spidermanprofile.jpg"><img src="images/Spidermanprofile.jpg" alt="Spider-Man" height="100"></a></td>
 				<td>Spider-sense, Strength, Agility</td>
 				<td>Ethyl Chloride Pesticide</td>
 			</tr>
 			<tr>
 				<td>Tony Stark</td>
 				<td>Iron Man</td>
-				<td><a href="images/IronManProfile.jpg"><img src="images/IronManProfile.jpg" alt="Iron Man" height="100"></a></td>
 				<td>Powered suit with advanced technology</td>
 				<td>EMP, Hacking, Weak without Suit</td>
 			</tr>
 			<tr>
 				<td>Bruce Banner</td>
 				<td>The Hulk</td>
-				<td><a href="images/HulkProfile.jpg"><img src="images/HulkProfile.jpg" alt="The Hulk" height="100"></a></td>
 				<td>Super strength, gets stronger as he gets angrier</td>
 				<td>Oxygen: Choking on Rage</td>
 			</tr>
