--- a/marketing/index.html
+++ b/marketing/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Pi Kappa Alpha, Mu Tau Chapter</h1>
     <section>
-        <iframe width="560" height="315" src="<blockquote class="instagram-media" 
+        <iframe width="560" height="315" src="https://www.instagram.com/p/Chc16Q7l2O5/" 
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/8jPQjjsBbIc"></iframe>
     </section>
     <section>
