--- a/marketing/index.html
+++ b/marketing/index.html
@@ -13,7 +13,7 @@
     <h1>Pi Kappa Alpha, Mu Tau Chapter</h1>
     <section>
 	    <iframe width="560" height="315" src="https://youtu.be/X24LOLNEp3M"</iframe>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/8jPQjjsBbIc"></iframe>
+	<iframe width="560" height="315" src="https://youtu.be/rNh8AWBLNt0"></iframe>
     </section>
     <section>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dFs9WO2B8uI"></iframe>
