--- a/marketing/index.html
+++ b/marketing/index.html
@@ -1,85 +1,33 @@
 <!DOCTYPE html>
-<html lang="en-us">  
-    <head>
-        <meta charset="UTF-8">
-        <title>Education</title>
-        <link rel="stylesheet" href="css/main.css">
- <style>
-        
-    </style>
-</head>
-
-<body>
-    <h1>Pi Kappa Alpha, Mu Tau Chapter</h1>
-    <section>
-	    <iframe width="560" height="315" src="https://youtu.be/X24LOLNEp3M"</iframe>
-	<iframe width="560" height="315" src="https://youtu.be/rNh8AWBLNt0"></iframe>
-    </section>
-    <section>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dFs9WO2B8uI"></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uk8x3V-sUgU"></iframe>
-    </section>   
-    <p><a href="index.html"><img src="images/button.png" alt="Homepage button"></a></p>
-</body>
-    
+<html lang="en">
 <head>
-	<title>Superheroes Table</title>
-	<style>
-		table {
-			border-collapse: collapse;
-			width: 100%;
-			margin-bottom: 20px;
-			background-color: lavender;
-			border: 2px solid black;
-			font-size: 14px;
-			font-family: Arial, sans-serif;
-			text-align: center;
-		}
-		th, td {
-			padding: 8px;
-			border: 1px solid #ddd;
-		}
-		th {
-			background-color: darkcyan;
-			color: white;
-	</style>
+  <meta charset="UTF-8">
+  <title>My Website Title</title>
+  <style>
+    /* CSS rules for styling the image */
+    .intro-image {
+      float: right;
+      margin-left: 20px;
+      max-width: 50%;
+    }
+  </style>
 </head>
 <body>
-	<table>
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>Alias</th>
-				<th>Superpower</th>
-				<th>Weakness</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Bruce Wayne</td>
-				<td>Batman</td>
-				<td>Average Human, No Powers</td>
-				<td>Vulnerable to Freezing</td>
-			</tr>
-			<tr>
-				<td>Peter Parker</td>
-				<td>Spider-Man</td>
-				<td>Spider-sense, Strength, Agility</td>
-				<td>Ethyl Chloride Pesticide</td>
-			</tr>
-			<tr>
-				<td>Tony Stark</td>
-				<td>Iron Man</td>
-				<td>Powered suit with advanced technology</td>
-				<td>EMP, Hacking, Weak without Suit</td>
-			</tr>
-			<tr>
-				<td>Bruce Banner</td>
-				<td>The Hulk</td>
-				<td>Super strength, gets stronger as he gets angrier</td>
-				<td>Oxygen: Choking on Rage</td>
-			</tr>
-		</tbody>
-	</table>
+  <header>
+    <h1>Welcome to My Website</h1>
+  </header>
+  
+  <main>
+    <section>
+      <h2>About Us</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce euismod justo eget dolor semper placerat. Ut fringilla quam vel dolor bibendum, et dignissim justo varius. Nam nec ante non eros hendrerit consectetur. Suspendisse tincidunt augue quis maximus hendrerit. Donec vel metus id enim feugiat congue. Integer quis orci arcu. Duis vestibulum augue massa, vel consequat dolor mollis ac. Aliquam pretium ipsum non ante rhoncus molestie.</p>
+      <img src="https://via.placeholder.com/500x300" alt="Image description" class="intro-image">
+      <p>Pellentesque aliquet ex et leo pretium scelerisque. Praesent maximus velit eu nisi ultrices, at sagittis mi faucibus. Integer mattis malesuada eros, id ullamcorper lorem. Suspendisse eget vestibulum ante. Aenean vel interdum sapien. Proin eu nulla dictum, commodo nibh a, laoreet elit. Sed vel ultricies lorem, quis euismod massa. Aenean consequat euismod nunc ut pellentesque.</p>
+    </section>
+  </main>
+  
+  <footer>
+    <p>&copy; 2023 My Website. All rights reserved.</p>
+  </footer>
 </body>
 </html>
