--- a/marketing/index.html
+++ b/marketing/index.html
@@ -25,7 +25,23 @@
       <p>Pellentesque aliquet ex et leo pretium scelerisque. Praesent maximus velit eu nisi ultrices, at sagittis mi faucibus. Integer mattis malesuada eros, id ullamcorper lorem. Suspendisse eget vestibulum ante. Aenean vel interdum sapien. Proin eu nulla dictum, commodo nibh a, laoreet elit. Sed vel ultricies lorem, quis euismod massa. Aenean consequat euismod nunc ut pellentesque.</p>
     </section>
   </main>
-  
+  <section>
+  <h2>Our Services</h2>
+  <div class="service-container">
+    <div class="service">
+      <h3>Service 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod magna velit, eu tincidunt mi aliquam nec.</p>
+    </div>
+    <div class="service">
+      <h3>Service 2</h3>
+      <p>Nullam pulvinar elit vel elit dictum elementum. Sed a lacinia turpis, quis sagittis orci.</p>
+    </div>
+    <div class="service">
+      <h3>Service 3</h3>
+      <p>Mauris non suscipit mauris. Nulla facilisi. In dictum, sapien nec vestibulum iaculis, lorem ex aliquam est, ut egestas turpis ante eget odio.</p>
+    </div>
+  </div>
+</section>
   <footer>
     <p>&copy; 2023 My Website. All rights reserved.</p>
   </footer>
