--- a/marketing/index.html
+++ b/marketing/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Website</h1>
+    <h1>Pi Kappa Alpha</h1>
   </header>
   
   <main>
     <section>
-      <h2>About Us</h2>
+      <h2>Mu Tau Chapter</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce euismod justo eget dolor semper placerat. Ut fringilla quam vel dolor bibendum, et dignissim justo varius. Nam nec ante non eros hendrerit consectetur. Suspendisse tincidunt augue quis maximus hendrerit. Donec vel metus id enim feugiat congue. Integer quis orci arcu. Duis vestibulum augue massa, vel consequat dolor mollis ac. Aliquam pretium ipsum non ante rhoncus molestie.</p>
       <img src="https://via.placeholder.com/500x300" alt="Image description" class="intro-image">
       <p>Pellentesque aliquet ex et leo pretium scelerisque. Praesent maximus velit eu nisi ultrices, at sagittis mi faucibus. Integer mattis malesuada eros, id ullamcorper lorem. Suspendisse eget vestibulum ante. Aenean vel interdum sapien. Proin eu nulla dictum, commodo nibh a, laoreet elit. Sed vel ultricies lorem, quis euismod massa. Aenean consequat euismod nunc ut pellentesque.</p>
