--- a/marketing/index.html
+++ b/marketing/index.html
@@ -20,7 +20,7 @@
   <main>
     <section>
       <h2>Mu Tau Chapter</h2>
-      <p>Our chapter is located at the University of Northern Colorado in Greeley, Colorado.</p>
+      <p>Our chapter is located at the University of Northern Colorado in Greeley, Colorado. We are dedicated to promoting leadership, scholarship, and service among our members. Our core values include Integrity, Diversity, Loyalty, Responsibility, and Excellence, which are reflected in our commitment to academic achievement, personal growth, and community service. Our fraternity believes in the importance of building lifelong relationships among our members and supporting each other in all aspects of life. Through our various programs and initiatives, we aim to inspire our members to make a positive impact on the world and to uphold the highest standards of character and integrity. Overall, we strive to create a community of leaders who are committed to making a difference in our communities and in the world.</p>
       <img src="https://via.placeholder.com/500x300" alt="Image description" class="intro-image">
       <p>Pellentesque aliquet ex et leo pretium scelerisque. Praesent maximus velit eu nisi ultrices, at sagittis mi faucibus. Integer mattis malesuada eros, id ullamcorper lorem. Suspendisse eget vestibulum ante. Aenean vel interdum sapien. Proin eu nulla dictum, commodo nibh a, laoreet elit. Sed vel ultricies lorem, quis euismod massa. Aenean consequat euismod nunc ut pellentesque.</p>
     </section>
