--- a/marketing/index.html
+++ b/marketing/index.html
@@ -26,23 +26,23 @@
     </section>
   </main>
   <section>
-  <h2>Our Services</h2>
+  <h2>SLAG</h2>
   <div class="service-container">
     <div class="service">
-      <h3>Service 1</h3>
+      <h3>Scholar</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod magna velit, eu tincidunt mi aliquam nec.</p>
     </div>
     <div class="service">
-      <h3>Service 2</h3>
+      <h3>Leader</h3>
       <p>Nullam pulvinar elit vel elit dictum elementum. Sed a lacinia turpis, quis sagittis orci.</p>
     </div>
     <div class="service">
-      <h3>Service 3</h3>
+      <h3>Athlete</h3>
       <p>Mauris non suscipit mauris. Nulla facilisi. In dictum, sapien nec vestibulum iaculis, lorem ex aliquam est, ut egestas turpis ante eget odio.</p>
     </div>
   </div>
     <div class="service">
-      <h3>Service 4</h3>
+      <h3>Gentlemen</h3>
       <p>Mauris non suscipit mauris. Nulla facilisi. In dictum, sapien nec vestibulum iaculis, lorem ex aliquam est, ut egestas turpis ante eget odio.</p>
     </div>
   </div>
