--- a/marketing/index.html
+++ b/marketing/index.html
@@ -30,7 +30,7 @@
   <div class="service-container">
     <div class="service">
       <h3>Scholar</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod magna velit, eu tincidunt mi aliquam nec.</p>
+      <p>Being a scholar is important because it helps us expand our knowledge, develop critical thinking skills, and pursue our passions. It also demonstrates a commitment to excellence and sets us apart as individuals who are dedicated to personal growth and intellectual development.</p>
     </div>
     <div class="service">
       <h3>Leader</h3>
