--- a/marketing/index.html
+++ b/marketing/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="service">
       <h3>Leader</h3>
-      <p>Nullam pulvinar elit vel elit dictum elementum. Sed a lacinia turpis, quis sagittis orci.</p>
+      <p>We love to build our members leadership skills. Leadership is essential for success, as it involves inspiring and motivating others, communicating effectively, and having a clear vision for the future. Strong interpersonal skills and accountability are also crucial for effective leadership.</p>
     </div>
     <div class="service">
       <h3>Athlete</h3>
