--- a/marketing/index.html
+++ b/marketing/index.html
@@ -38,12 +38,12 @@
     </div>
     <div class="service">
       <h3>Athlete</h3>
-      <p>Mauris non suscipit mauris. Nulla facilisi. In dictum, sapien nec vestibulum iaculis, lorem ex aliquam est, ut egestas turpis ante eget odio.</p>
+      <p>Athletics promotes physical and mental health, while developing discipline, teamwork, and leadership skills. It requires dedication and hard work, and provides opportunities for personal growth and lifelong friendships.</p>
     </div>
   </div>
     <div class="service">
       <h3>Gentlemen</h3>
-      <p>Mauris non suscipit mauris. Nulla facilisi. In dictum, sapien nec vestibulum iaculis, lorem ex aliquam est, ut egestas turpis ante eget odio.</p>
+      <p>Being a gentleman involves embodying values such as respect, kindness, and accountability towards others, and striving to be the best version of oneself.</p>
     </div>
   </div>
 </section>
