--- a/marketing/index.html
+++ b/marketing/index.html
@@ -48,7 +48,7 @@
   </div>
 </section>
  <section>
-  <h2>Our Services</h2>
+  <h2>2023 School Year</h2>
   <ul class="services-list">
     <li class="service">
       <h3>Service 1</h3>
