--- a/marketing/index.html
+++ b/marketing/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>My Website Title</title>
   <style>
-    <link rel="stylesheet" href="css/pike.css">
+    <link rel="stylesheet" href="css/pike">
     .intro-image {
       float: right;
       margin-left: 20px;
