--- a/marketing/index.html
+++ b/marketing/index.html
@@ -9,7 +9,20 @@
       margin-left: 20px;
       max-width: 50%;
     }
-    <link rel="stylesheet" href="css/pike">
+    body {
+        background-color: #d81e05;
+        color: #f7dc00;
+      }
+      h1, h2, h3, h4, h5, h6 {
+        color: #002b5c;
+      }
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+      a:hover {
+        color: #f7dc00;
+      }
   </style>
 </head>
 <body>
