--- a/marketing/index.html
+++ b/marketing/index.html
@@ -10,18 +10,18 @@
       max-width: 50%;
     }
     body {
-        background-color: #d81e05;
+        background-color: #772432;
         color: #f7dc00;
       }
       h1, h2, h3, h4, h5, h6 {
-        color: #002b5c;
+        color: #8b6e4a;
       }
       a {
         color: #fff;
         text-decoration: none;
       }
       a:hover {
-        color: #f7dc00;
+        color: #ffcb4f;
       }
   </style>
 </head>
