--- a/marketing/index.html
+++ b/marketing/index.html
@@ -11,7 +11,7 @@
     }
     body {
         background-color: #772432;
-        color: #f7dc00;
+        color: #ffffff;
       }
       h1, h2, h3, h4, h5, h6 {
         color: #8b6e4a;
