--- a/marketing/index.html
+++ b/marketing/index.html
@@ -65,24 +65,20 @@
   <ul class="services-list">
     <li class="service">
       <h3>Service 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod magna velit, eu tincidunt mi aliquam nec.</p>
     </li>
     <li class="service">
       <h3>Service 2</h3>
-      <p>Nullam pulvinar elit vel elit dictum elementum. Sed a lacinia turpis, quis sagittis orci.</p>
     </li>
     <li class="service">
       <h3>Service 3</h3>
-      <p>Mauris non suscipit mauris. Nulla facilisi. In dictum, sapien nec vestibulum iaculis, lorem ex aliquam est, ut egestas turpis ante eget odio.</p>
     </li>
     <li class="service">
       <h3>Service 4</h3>
-      <p>Vivamus vehicula, lacus eget pulvinar pretium, augue eros hendrerit justo, quis scelerisque leo sapien eu neque.</p>
     </li>
   </ul>
 </section>
   <footer>
-    <p>&copy; 2023 My Website. All rights reserved.</p>
+    <p>&copy; 2023 Mu Tau Chapter, Pi Kappa Alpha. All rights reserved.</p>
   </footer>
 </body>
 </html>
