--- a/marketing/index.html
+++ b/marketing/index.html
@@ -64,16 +64,16 @@
   <h2>2023 School Year</h2>
   <ul class="services-list">
     <li class="service">
-      <h3>Service 1</h3>
+      <h3>Philanthropy</h3>
     </li>
     <li class="service">
-      <h3>Service 2</h3>
+      <h3>First Place Greek Week Placement</h3>
     </li>
     <li class="service">
-      <h3>Service 3</h3>
+      <h3>DZ 3v3 Basketball Champions, 2 years in a row</h3>
     </li>
     <li class="service">
-      <h3>Service 4</h3>
+      <h3>Executive Board: Albert Ursetta, Logan Raulie, Michael Wilson, Stephen Kahn, Camden Shipman, Porter Hossack, Tyler Lynch, Reese Cruz, Cole Hicks</h3>
     </li>
   </ul>
 </section>
